# board-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
bot/: game.py
bot/const/: custom_types.py  emoji.py  games.py
bot/lobby/: __init__.py  admin_ctrl.py  buttons.py  embed.py  lobby.py  select.py
games/: interface.py
games/cards_against_humanity/: cards.py  game.py  pick.py
games/cards_against_humanity/assets/: black.txt  white.txt
games/default_assets/: emojis.json  emojis.py
games/interface/: game.py
games/secret_hitler/: __init__.py  game.py
games/secret_hitler/assets/: emoji.py
tests/: test_coro_timeout.py
utils/: coro_timeout.py
